# python-learning

./: .gitattributes  .gitignore  README.md  categorical_to_integer.py  pyproject.toml
computing/numpy_exercises/: 100_numpy_exercises.ipynb
computing/pyspark/notebooks/: window_funcitons.ipynb
concurrency/notebooks/threading/: exception_handling.ipynb  thread_based_concurrency.ipynb  usage_patterns.ipynb
concurrency/scripts/thread_management/: configure_initializer.py  configure_thread_name.py
concurrency/scripts/threading_examples/: download_multithread.py  download_seq.py  manual_thread_creation.py  multi_thread_map.py  multi_thread_submit.py  read_csv_multithread.py  read_csv_seq.py  single_thread.py  website_status.py
concurrency/threads_based_concurrency/: configure_thread_name.py  usage_patterns.ipynb  website_status.py
concurrency_parallel/threads_based_concurrency/: configure_initializer.py  download_seq.py  multi_thread_submit.py  read_csv_seq.py
conda_environment_setup/: environment_setup.yaml
conda_environment_var/: setup_env_var.md
control_flow/notebooks/: generator_function.ipynb  iteration_helper.ipynb  iterator_protocol.ipynb  itertool.ipynb  list_comp.ipynb  set_dict_comp.ipynb
csv_processing/csv_txt_conversion/: csv_txt.py
csv_processing/read_many_csv/: read_many_csv.py
csv_txt_conversion/: csv_txt.py
data_model/dicts_sets/: internals.ipynb
data_model/dicts_sets/notebooks/: internals.ipynb
data_model/dicts_sets/scripts/: random_salt.py
data_model/lists/notebooks/: over_allocation.ipynb  sorting.ipynb
data_model/sequence/scripts/: vector.py
data_model/vector_class/: vector.py
data_types/dicts_sets/: internals.ipynb
data_types/dicts_sets/scripts/: random_salt.py
iterations/: generator_function.ipynb  iteration_helper.ipynb  iterations.ipynb  iterations_thoery.ipynb  itertool.ipynb  list_comp.ipynb  new_iterables.ipynb  set_dict_comp.ipynb
iterations/.ipynb_checkpoints/: iteration_helper-checkpoint.ipynb  iterations-checkpoint.ipynb
json_processing/parse_load_dump/: myinfo_default.json  parse_load_dump.py
json_processing/weather_project/: getOpenWeather.py
json_toolkit/: myinfo_custom_separators.json  parse_load_dump.py  sample.json
json_toolkit/weather_project/: .gitignore  getOpenWeather.py
network/concepts/asyncio/notebooks/: asnycio.ipynb
network/concepts/asyncio/scripts/: blogdom_async.py  count_async.py  count_sync.py
network/fast_api/first_examples/: run_examples.ipynb
network/fast_api/first_examples/scripts/: endpoint.py  path_parameters.py  (+2 more)
parallelism/task_queue_example/: dump.rdb  install_redis.sh
parallelism/task_queue_example/redis_scripts/: redis_queue.py  redis_queue_client.py  redis_queue_worker.py  redis_server.py  word_count_task.py
parallelism/task_queue_example/scripts/: multiprocessing_pool_word_count.py  multiprocessing_queue.py  multiprocessing_queue_word_count.py  utils.py  word_count_task.py
parallell/: terminology.md
parallell/threads_based_concurrency/: exception_handling.ipynb  manual_thread_creation.py  read_csv_multithread.py  single_thread.py  thread-based concurrency.ipynb
pdf_toolkit/PyPDF2/: open_extract.py
read_many_csv/: read_many_csv.py
scientific_computing/numpy_exercises/: 100_numpy_exercises.ipynb  pyproject.toml
timer_utility_functions/: timer.py
tools/timer_utilities/: timer.py
tools/utils/: rename_snake_case.py  sagemaker_startup_script.sh
utilities/setup/: conda_env_var.md
