[project]
name = "python_learning"
description = "Python learning, tools, and reusable snippets for automating various tasks"
dependencies = [
    "fastapi>=0.115.5", 
    "requests>=2.32.3", 
    "pydantic>=2.10.1", 
    "uvicorn>=0.32.1", 
    "httpx>=0.27.2", 
    "gunicorn>=23.0.0", 
    "pandas[computation,parquet,performance,plot]>=2.2.3", 
    "polars>=1.14.0", 
    "redis>=5.2.0", 
    "nltk>=3.9.1"
]
requires-python = ">=3.11"
readme = "README.md"

[tool.pdm]
distribution = false

[dependency-groups]
lint-fmt = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
notebook = [
    "ipykernel>=6.29.5",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "I",
    "F401",
]

[tool.mypy]
python_version = 3.11
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "requests.*",
    "nltk.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "redis_queue_worker.*",
    "redis_queue.*",
    "utils.*",
    "word_count_task.*",
]
ignore_missing_imports = true
