[project]
name = "numpy-exercises"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bottleneck>=1.4.2",
    "copulas>=0.12.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy>=2.2.2",
    "pyyaml>=6.0.2",
    "ruff>=0.9.3",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
